--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
+    "react-select": "^5.9.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.5.0"
