--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
     "react-select": "^5.9.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.5.0"
@@ -62,6 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
